flux/clusters/kyuubee/infra/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus

spec:
  selector:
    prometheus: prometheus

  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
