flux/clusters/kyuubee/infra/prometheus/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus

spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-system

  hostnames:
    - 'prometheus.yuki.no'

  rules:
    - backendRefs:
        - name: prometheus
          port: 9090
